# A setup.cfg module.
#
#   https://github.com/Alinvor/Python-DeMo/
#
# see:
#
#  1. https://setuptools.readthedocs.io/en/latest/
#  2. https://setuptools.pypa.io/en/latest/userguide/declarative_config.html/
#  3. https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#metadata
#  4. https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#options
#  5. https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#compatibility-with-other-tools
#  6. https://packaging.python.org/guides/distributing-packages-using-setuptools/
#  7. https://pypi.org/classifiers/
#  8. https://github.com/pycqa/flake8/
#  9. https://flake8.pycqa.org/en/latest/
#  10. https://github.com/python/mypy
#  11. https://mypy.readthedocs.io/en/stable/
#  12. https://mypy.readthedocs.io/en/latest/python2.html
#
[metadata]
name = com.dvsnier.config
version = 0.0.2.dev3
description = this is dvsnier config.
long_description = file: ./doc/description/config/README.md
long_description_content_type = text/markdown
author = dvsnier
author_email = dovsnier@qq.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    License :: Free For Educational Use
    License :: Free for non-commercial use
    License :: Freely Distributable
    License :: Freeware
    Natural Language :: Chinese (Simplified)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    config
    development
license = MIT
license_file = LICENSE.txt
project_urls =
    Bug_Tracker = https://github.com/Alinvor/Python-DeMo/issues/
    Documentation = https://packaging.python.org/tutorials/distributing-packages/
    Funding = https://donate.pypi.org/
    Homepage = https://github.com/Alinvor/Python-DeMo/
    Wiki = https://github.com/Alinvor/Python-DeMo/wiki/
    Source = https://github.com/Alinvor/Python-DeMo/


[options]
include_package_data = True
install_requires =
    # packaging>=19.0
    # pep517>=0.9.1
    # toml>=0.10.0
    # importlib-metadata>=0.22;python_version < "3.8"
    # typing>=3.5.3.0;python_version < "3"
    # virtualenv>=20.0.35;python_version < "3"
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4
package_dir =
    =src
zip_safe = False

[options.data_files]

[options.entry_points]
# console_scripts =
#    dvs-cfg = package.module:function

[options.extras_require]
docs =
#    furo>=2020.11.19b18
#    sphinx~=3.0
#    sphinx-argparse-cli>=1.5
#    sphinx-autodoc-typehints>=1.10
test =
#    filelock>=3
#    pytest>=4
#    pytest-cov>=2
#    pytest-mock>=2
#    pytest-rerunfailures>=8.0
#    pytest-xdist>=1.34
#    setuptools>=42.0.0
#    wheel>=0.36.0
#    pathlib2>=2.0.0;python_version < "3"
typing =
    mypy==0.800
    typing-extensions>=3.7.4.3
virtualenv =
    virtualenv>=20.0.35

[options.package_data]
build =
    py.typed

[options.packages.find]
where = src


[bdist_wheel]
universal = 1


[flake8]
max-line-length = 140
max-complexity = 10
extend-ignore = E203


[mypy]
ignore_missing_imports = True
strict = True


[coverage:run]
omit =
    setup.py
    *bin/pyproject-build
    *bin\pyproject-build.exe

[coverage:report]
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise NotImplementedError\b

[coverage:paths]
source =
    src
    */site-packages
    *\site-packages

[coverage:html]
show_contexts = true
